--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
 <p id="head">Improve your front-end skills by building projects</p>
 <p id="content">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
 </p>
+	<div class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="#">Pavithra</a>.
+    </div>
 </div>
 </div>
